Added the five day forecast

--- a/src/styles.css
+++ b/src/styles.css
@@ -81,3 +81,9 @@ h1 {
   border-radius: 5px;
   padding: 13px;
 }
+
+.weather-five-day {
+  margin: 0 50px;
+  display: flex;
+  justify-content: space-evenly;
+}
