--- a/src/Header.css
+++ b/src/Header.css
@@ -18,8 +18,7 @@ h1 {
   width: 180px;
   height: 180px;
   /* text-align: center; */
-  border: 2px solid darkgrey;
-  background-color: darkgreen;
+  background-color: teal;
   border-radius:50%;
   padding: 8px;
 }
