--- a/src/Header.css
+++ b/src/Header.css
@@ -5,20 +5,13 @@ img {
   height: 100px;
 }
 
-h1 {
-  font-weight: 600;
-  text-align: center;
-  font-size: 45px;
-}
-
 .big-weather-emoji {
-  /* display: block; */
+  display: block;
   margin: 40px auto;
-  /* font-size: 60px; */
+  box-shadow: 0px 10px 10px rgba(54, 52, 52, 0.3);
   width: 180px;
   height: 180px;
-  /* text-align: center; */
-  background-color: teal;
+  background-color: #459496;
   border-radius:50%;
   padding: 8px;
 }
