--- a/src/Search.css
+++ b/src/Search.css
@@ -28,7 +28,7 @@
   margin-left: 5px;
   font-size: 16px;
   color: white;
-  background-color: teal;
+  background-color: #459496;
   border: 0;
   border-radius: 5px;
   padding: 13px;
