Basic layout of one day of forecast

--- a/src/Search.css
+++ b/src/Search.css
@@ -24,7 +24,7 @@
 }
 
 .search-button {
-  background-color: rgba(251, 224, 234, 0.6);
+  /* background-color: rgba(251, 224, 234, 0.6); */
   margin-left: 5px;
   font-size: 16px;
   color: white;
