--- a/src/Header.css
+++ b/src/Header.css
@@ -1,10 +1,3 @@
-
-img {
-  display: block;
-  margin: 0 auto;
-  height: 100px;
-}
-
 .big-weather-emoji {
   display: block;
   margin: 40px auto;
@@ -14,4 +7,10 @@ img {
   background-color: #459496;
   border-radius:50%;
   padding: 8px;
+}
+
+.big-weather-emoji img {
+  display: block;
+  margin: 30px auto;
+  height: 100px;
 }
