--- a/src/Search.css
+++ b/src/Search.css
@@ -9,7 +9,7 @@
   font-size: 14px;
   background-color: #79d1cf;
   margin-top: -80px;
-  border-radius: 10px;
+  border-radius: 15px;
 }
 
 .search-field {
@@ -32,4 +32,10 @@
   border: 0;
   border-radius: 5px;
   padding: 13px;
+}
+
+.forecast {
+  max-width: 75%;
+  display: block;
+  margin: 0 auto;
 }
