--- a/src/styles.css
+++ b/src/styles.css
@@ -22,7 +22,12 @@
     display: none;
   }
   body {
-    background: url("images/cloudsSunRays.jpg") no-repeat;
-    /* background-size: cover; */
+    background: url("images/cloudsSunRays.jpg") no-repeat
+  }
+}
+
+@media (max-width: 980px) {
+  .App {
+    margin: 0 40px;
   }
 }
